# Gui_Project

./: .gitignore  CMakeLists.txt  main.cpp  setup.py
default_shaders/base_shader/: shader.frag  shader.vert
default_shaders/points_shader/: shader.frag  shader.vert
default_shaders/single_color_shader/: shader.frag  shader.vert
defaults/default_shaders/points_shader/: shader.frag
source/: global.h  includes.h  kv.h
source/assets/: asset_object.cpp  asset_object.h  folder_asset.cpp  folder_asset.h  material_asset.cpp  material_asset.h  render_texture_asset.cpp  render_texture_asset.h  scene_asset.cpp  scene_asset.h  shader_asset.cpp  shader_asset.h  text_asset.cpp  text_asset.h  texture2D_asset.cpp  texture2D_asset.h
source/camera/: camera.cpp  camera.h
source/components/: add_only_to.h  add_to_every_object.h  component.cpp  component.h  component_specifier.h  derive_from_component.h  disable_in_play.h  internal_use.h  object_property_storage.h
source/drawable/: drawable.cpp  drawable.h
source/general/: color.cpp  color.h  helpers.cpp  helpers.h  math.cpp  math.h  movable.cpp  movable.h  structures.cpp  structures.h  transform.cpp  transform.h
source/gui_layer/: console_view.h  explorer_view.cpp  explorer_view.h  game_view.cpp  game_view.h  gui_layer.cpp  gui_layer.h  gui_object.cpp  gui_object.h  gui_useful_implementations.cpp  gui_useful_implementations.h  gui_view.cpp  gui_view.h  properties_view.cpp  properties_view.h  scene_hierarchy_view.cpp  scene_hierarchy_view.h
source/mesh/: drawing_modes.cpp  drawing_modes.h  mesh.cpp  mesh.h
source/model_loader/: model_loader.cpp  model_loader.h  texture_loader.cpp
source/object/: add_to_every_object.h  add_when_called.h  base_object.h  component.cpp  component.h  component_behavior.h  editor_only.h  game_object.cpp  game_object.h  hidden_in_editor.h  object.cpp  object.h  object_base.h  object_properties.cpp  object_properties.h  object_properties_component.cpp  object_properties_component.h  object_property_register.cpp  object_property_register.h  object_property_storage.h  registry.cpp  registry.h  tagged_object.h
source/opengl_wrappers/: framebuffer.cpp  framebuffer.h  shader.cpp  shader.h  texture.cpp  texture.h  vertex_array.cpp  vertex_array.h
source/panels/: lighting_panel.cpp  lighting_panel.h  panels.h
source/python_helpers/: module.cpp
source/window/: window.cpp  window.h
